--- a/kal.html
+++ b/kal.html
@@ -8,12 +8,20 @@
     h1 { text-align: center; color: #FFFFFF; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
+    .event-form { background: #e6edfa; border-radius: 10px; padding: 16px 22px 10px 22px; margin-bottom: 16px; display: flex; align-items: center; gap: 13px;}
+    .event-form label { color: #444; font-weight: bold; }
+    .event-form select, .event-form input[type="text"] {
+      padding: 4px 8px; font-size: 16px; border-radius: 5px; border:1px solid #bbb; margin-left: 6px; margin-right: 16px;
+    }
+    .event-form button { background: orange; color: #111; font-weight: bold; border: none; border-radius: 6px; padding: 7px 15px; font-size: 15px; cursor: pointer;}
+    .event-form button:hover { background: #e69500; }
     .kalendar-wrap { background: #e6edfa; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
     .cell { min-height: 120px; background: white; color: #444; border-radius: 10px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
     .names-list {margin: 4px 0 0 0; font-size: 12px;}
+    .custom-event { background: orange; color: #111; border-radius: 2px; padding: 0 5px; margin-top: 3px; font-size: 12px; font-weight: bold; }
     .legend-row { margin: 32px 0 0 0; display: flex; align-items: center; justify-content: space-between; width: 100%; }
     .legend { display: flex; gap: 35px; flex-wrap: wrap;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px; color: #444;}
@@ -44,12 +52,12 @@
         position: absolute; left: 0; top: 0; width: 100vw; background: white !important; 
         min-height: 99vh;
       }
-      .calendar-toolbar, .upload-block, h1 {display:none !important;}
+      .calendar-toolbar, .upload-block, .event-form, h1 {display:none !important;}
       .print-title {display: block !important;}
       .legend-logo { display: inline-block !important; }
       .aktualizovano { color: #222 !important; }
     }
-    .legend-logo { display: none; } /* Na webu skryté */
+    .legend-logo { display: none; }
   </style>
 </head>
 <body>
@@ -58,6 +66,15 @@
     <div class="upload-block">
       <span style="color:#d1ebff;">Nahraj CSV export z KS a udělej si přehled...</span><input type="file" id="csvInput" accept=".csv" />
     </div>
+    <form class="event-form" id="eventForm" autocomplete="off" onsubmit="return false;">
+      <label>Den:
+        <select id="eventDay"></select>
+      </label>
+      <label>Název události:
+        <input type="text" id="eventText" maxlength="50" placeholder="Např. Pracovní neděle A1" required />
+      </label>
+      <button type="submit">Přidat událost</button>
+    </form>
     <div class="kalendar-wrap" id="kalendarWrap" style="display:none;">
       <div class="calendar-toolbar">
         <select class="month-select" id="monthSelect"></select>
@@ -87,25 +104,81 @@
       'DOV':  { label: 'DOV',   cls: 'abs-dov', name: 'Dovolená', order: 3 },
       'D/2':  { label: 'D/2',   cls: 'abs-pul', name: 'Půlden dovolené', order: 4 }
     };
-    function getAbsenceType(code) {
-      code = (code || '').toUpperCase().replace(/\s+/g, '');
-      if (code === 'NEM') return absenceTypes['NEM'];
-      if (code === 'LEK') return absenceTypes['LEK'];
-      if (code === 'DOV') return absenceTypes['DOV'];
-      if (code === 'D/2' || code === '1/2DOV' || code === 'PULDOV') return absenceTypes['D/2'];
-      if (code && code !== 'SME' && code !== '-') return { label: code, cls: 'abs-ostatni', name: 'Ostatní', order: 5 };
-      return null;
-    }
     const mesice = ["LEDEN","ÚNOR","BŘEZEN","DUBEN","KVĚTEN","ČERVEN","ČERVENEC","SRPEN","ZÁŘÍ","ŘÍJEN","LISTOPAD","PROSINEC"];
 
+    // Vlastní události pro každý měsíc a rok (uchováme v localStorage)
+    function getCustomEventsKey(year, month) {
+      return `customEvents_${year}_${month}`;
+    }
+    function loadCustomEvents(year, month) {
+      return JSON.parse(localStorage.getItem(getCustomEventsKey(year, month)) || '{}');
+    }
+    function saveCustomEvents(year, month, events) {
+      localStorage.setItem(getCustomEventsKey(year, month), JSON.stringify(events));
+    }
+    // Pomocná funkce pro vymazání událostí pokud budeš chtít
+    // function clearCustomEvents(year, month) { localStorage.removeItem(getCustomEventsKey(year, month)); }
+
+    // Inicializace pole pro události
+    let currentYear = null, currentMonth = null, currentDays = 31;
+    let customEvents = {};
+
+    function nastavDatumAktualizace() {
+      const d = new Date();
+      const day = d.getDate().toString().padStart(2,'0');
+      const month = (d.getMonth()+1).toString().padStart(2,'0');
+      const year = d.getFullYear();
+      document.getElementById("aktualizovano").textContent = `Aktualizováno dne: ${day}.${month}.${year}`;
+    }
+
+    function fillEventDaySelect(days) {
+      const select = document.getElementById('eventDay');
+      select.innerHTML = '';
+      for(let i=1;i<=days;i++) {
+        let opt = document.createElement('option');
+        opt.value = i;
+        opt.textContent = i;
+        select.appendChild(opt);
+      }
+    }
+
+    // Funkce pro přidání události
+    function addCustomEvent(day, text) {
+      if (!customEvents[day]) customEvents[day] = [];
+      customEvents[day].push(text);
+      saveCustomEvents(currentYear, currentMonth, customEvents);
+      renderKalendar(lastParsed, currentYear, currentMonth);
+    }
+
+    // Zpracování vlastního formuláře pro události
+    document.getElementById('eventForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const day = document.getElementById('eventDay').value;
+      const text = document.getElementById('eventText').value.trim();
+      if(!text) return;
+      addCustomEvent(day, text);
+      document.getElementById('eventText').value = "";
+    });
+
+    // Uložení naposledy parsovaných dat (kvůli re-renderu)
+    let lastParsed = null;
+
+    // Ostatní původní funkce
     function saveToCache(parsed, year, month) {
       let cache = {parsed, year, month};
       localStorage.setItem("kalendarCache", JSON.stringify(cache));
     }
     window.addEventListener('DOMContentLoaded', () => {
       let cache = localStorage.getItem("kalendarCache");
+      let d = new Date();
+      currentYear = d.getFullYear();
+      currentMonth = d.getMonth()+1;
+      currentDays = new Date(currentYear, currentMonth, 0).getDate();
+      fillEventDaySelect(currentDays);
+      customEvents = loadCustomEvents(currentYear, currentMonth);
       if (cache) {
         let data = JSON.parse(cache);
+        lastParsed = data.parsed;
         renderKalendar(data.parsed, data.year, data.month);
       }
       nastavDatumAktualizace();
@@ -120,6 +193,7 @@
         let parsed = parseCSV(text);
         let today = new Date();
         let m = today.getMonth()+1, y = today.getFullYear();
+        lastParsed = parsed;
         renderKalendar(parsed, y, m);
         saveToCache(parsed, y, m);
         nastavDatumAktualizace();
@@ -143,8 +217,14 @@
       ms.onchange = function() {
         let [yy, mm] = ms.value.split('-');
         let cache = localStorage.getItem("kalendarCache");
+        currentYear = parseInt(yy);
+        currentMonth = parseInt(mm);
+        currentDays = new Date(currentYear, currentMonth, 0).getDate();
+        fillEventDaySelect(currentDays);
+        customEvents = loadCustomEvents(currentYear, currentMonth);
         if (cache) {
           let data = JSON.parse(cache);
+          lastParsed = data.parsed;
           renderKalendar(data.parsed, parseInt(yy), parseInt(mm));
           saveToCache(data.parsed, parseInt(yy), parseInt(mm));
         }
@@ -153,6 +233,12 @@
     }
 
     function renderKalendar(parsed, year, month) {
+      currentYear = year;
+      currentMonth = month;
+      currentDays = new Date(year, month, 0).getDate();
+      fillEventDaySelect(currentDays);
+      customEvents = loadCustomEvents(year, month);
+
       document.getElementById('kalendarWrap').style.display = "";
       fillMonthSelect(year, month);
       let title = `${mesice[month-1]} ${year.toString().slice(-2)}`;
@@ -187,6 +273,12 @@
             calendarHtml += `<div class="${abs.typ.cls}">${(abs.jmeno || "").replace(/ *[|\/-].*$/,"").trim()}</div>`;
           });
           calendarHtml += `</div>`;
+        }
+        // vlastní události
+        if(customEvents[den] && customEvents[den].length) {
+          customEvents[den].forEach(eventText => {
+            calendarHtml += `<div class="custom-event">${eventText.replace(/</g,"&lt;")}</div>`;
+          });
         }
         calendarHtml += `</div>`;
         cell++;
@@ -225,14 +317,6 @@
         });
       });
       return {data};
-    }
-
-    function nastavDatumAktualizace() {
-      const d = new Date();
-      const day = d.getDate().toString().padStart(2,'0');
-      const month = (d.getMonth()+1).toString().padStart(2,'0');
-      const year = d.getFullYear();
-      document.getElementById("aktualizovano").textContent = `Aktualizováno dne: ${day}.${month}.${year}`;
     }
   </script>
 </body>
