--- a/kal.html
+++ b/kal.html
@@ -8,14 +8,14 @@
     h1 { text-align: center; color: #FFFFFF; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
-    .event-form { background: #e6edfa; border-radius: 10px; padding: 16px 22px 10px 22px; margin-bottom: 16px; display: flex; align-items: center; gap: 13px;}
+    .event-form { background: #b3d4ff; border-radius: 10px; padding: 16px 22px 10px 22px; margin-bottom: 16px; display: flex; align-items: center; gap: 13px;}
     .event-form label { color: #444; font-weight: bold; }
     .event-form select, .event-form input[type="text"] {
       padding: 4px 8px; font-size: 16px; border-radius: 5px; border:1px solid #bbb; margin-left: 6px; margin-right: 16px;
     }
     .event-form button { background: orange; color: #111; font-weight: bold; border: none; border-radius: 6px; padding: 7px 15px; font-size: 15px; cursor: pointer;}
     .event-form button:hover { background: #e69500; }
-    .kalendar-wrap { background: #e6edfa; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
+    .kalendar-wrap { background: #b3d4ff; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
     .cell { min-height: 120px; background: white; color: #444; border-radius: 10px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
