--- a/prichody.html
+++ b/prichody.html
@@ -49,7 +49,7 @@
       margin-bottom: 20px;
     }
     .logo {
-      max-width: 100%;
+      max-width: 90%;
       height: auto;
       max-height: 120px;
     }
@@ -418,6 +418,7 @@
         jeVedouci = true;
         adminModalBg.classList.remove('show');
         zobrazTlacitka();
+        zobrazZamestnance(); // ← DOPLNĚNO!
       } else {
         adminMsg.textContent = "Nesprávné heslo!";
       }
