--- a/barcode.html
+++ b/barcode.html
@@ -23,7 +23,7 @@
       padding: 10px 14px;
       font-size: 1.1rem;
       width: 95%;
-      max-width: 380px;
+      max-width: 415px;
       margin: 20px 5px 16px 5px;
       border-radius: 7px;
       border: 1.5px solid #ccc;
@@ -140,7 +140,7 @@
     <input
       type="text"
       id="text"
-      placeholder="Zde vlož, více dat odděl středníkem;"
+      placeholder="vlož text, více dat odděl středníkem;"
       onkeydown="if(event.key==='Enter'){event.preventDefault();generateBarcode();}"
       autocomplete="off"
     >
