--- a/barcode.html
+++ b/barcode.html
@@ -13,8 +13,19 @@
       padding: 0;
       text-align: center;
     }
+    .logo-wrap {
+      text-align: center;
+      margin-top: 38px;
+      margin-bottom: 20px;
+    }
+    .logo {
+      max-width: 250px;
+      width: 100%;
+      height: auto;
+      display: inline-block;
+    }
     .main-content {
-      margin-top: 87px;
+      margin-top: 24px;
       display: inline-block;
       width: 100%;
       max-width: 98vw;
@@ -136,6 +147,9 @@
   </style>
 </head>
 <body>
+  <div class="logo-wrap">
+    <img src="static/logo/logo.png" alt="Sportisimo Logo" class="logo">
+  </div>
   <div class="main-content">
     <input
       type="text"
