--- a/kal.html
+++ b/kal.html
@@ -92,7 +92,7 @@
             <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
           </div>
           <div class="aktualizovano" id="aktualizovano"></div>
-          <img src="static/logo2.html" class="legend-logo" alt="Logo">
+          <img src="static/logo2.svg" class="legend-logo" alt="Logo">
         </div>
       </div>
     </div>
