--- a/barcode.html
+++ b/barcode.html
@@ -147,8 +147,8 @@
   </style>
 </head>
 <body>
-  <div class="logo-wrap">
-    <img src="static/logo/logo.png" alt="Sportisimo Logo" class="logo">
+  <div class="-wrap">
+    <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
   </div>
   <div class="main-content">
     <input
