--- a/kal.html
+++ b/kal.html
@@ -8,8 +8,8 @@
     h1 { text-align: center; color: #FFFFFF; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
-    .event-form { background: #5ca8e1; border-radius: 10px; padding: 16px 22px 10px 22px; margin-bottom: 16px; display: flex; align-items: center; gap: 13px;}
-    .event-form label { color: #444; font-weight: bold; }
+    .event-form { background: #0066b3; border-radius: 10px; padding: 16px 22px 10px 22px; margin-bottom: 16px; display: flex; align-items: center; gap: 13px;}
+    .event-form label { color: #FFFFFF; font-weight: bold; }
     .event-form select, .event-form input[type="text"] {
       padding: 4px 8px; font-size: 16px; border-radius: 5px; border:1px solid #bbb; margin-left: 6px; margin-right: 16px;
     }
