--- a/kal.html
+++ b/kal.html
@@ -14,7 +14,7 @@
       padding: 4px 8px; font-size: 16px; border-radius: 5px; border:1px solid #bbb; margin-left: 6px; margin-right: 16px;
     }
     .event-form button { background: orange; color: #111; font-weight: bold; border: none; border-radius: 6px; padding: 7px 15px; font-size: 15px; cursor: pointer;}
-    .event-form button:hover { background: #e69500; }
+    .event-form button:hover { background: #ffc300; }
     .kalendar-wrap { background: #b3d4ff; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #0066b3; margin-bottom: 5px;}
