--- a/kal.html
+++ b/kal.html
@@ -15,7 +15,7 @@
     }
     .event-form button { background: orange; color: #ffd700; font-weight: bold; border: none; border-radius: 6px; padding: 7px 15px; font-size: 15px; cursor: pointer;}
     .event-form button:hover { background: #ffc300; }
-    .kalendar-wrap { background: #0066b3; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
+    .kalendar-wrap { background: #d1ebff; border-radius: 10px; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
     .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #003863; margin-bottom: 5px;}
     .cell { min-height: 120px; background: white; color: #444; border-radius: 10px; border: 2px solid #0066b3; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
