--- a/kal.html
+++ b/kal.html
@@ -104,6 +104,14 @@
       'DOV':  { label: 'DOV',   cls: 'abs-dov', name: 'Dovolená', order: 3 },
       'D/2':  { label: 'D/2',   cls: 'abs-pul', name: 'Půlden dovolené', order: 4 }
     };
+    
+    function getAbsenceType(typ) {
+      if (absenceTypes[typ]) return absenceTypes[typ];
+      if (typ === 'PUL' || typ === 'D2' || typ === 'D.2') return absenceTypes['D/2'];
+      if (['OST', 'ABS', 'MAT', 'OČR'].includes(typ)) 
+        return { label: typ, cls: 'abs-ostatni', name: 'Ostatní absence', order: 10 };
+      return null;
+    }
     const mesice = ["LEDEN","ÚNOR","BŘEZEN","DUBEN","KVĚTEN","ČERVEN","ČERVENEC","SRPEN","ZÁŘÍ","ŘÍJEN","LISTOPAD","PROSINEC"];
 
     // Vlastní události pro každý měsíc a rok (uchováme v localStorage)
