--- a/bra_pc.html
+++ b/bra_pc.html
@@ -182,7 +182,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>WaitBRA (PC verze)</h1>
+  <div style="text-align: center;">
+  <img src="static/logo.png" alt="Logo" style="max-width: 180px; height: auto; margin-bottom: 10px;">
+  <h1>WaitBRA</h1>
+</div>
   <div class="main-wrap">
     <div class="panel">
       <div class="uploader">
