--- a/bra_pc.html
+++ b/bra_pc.html
@@ -161,9 +161,194 @@
       <button id="modalClose">OK</button>
     </div>
   </div>
-  <!-- Ponechávám tvůj JS beze změny -->
   <script>
-    // ... tvůj původní JS zde ...
+    let codes = [];
+    let scanned = new Set();
+    const STORAGE_KEY = "waitbra-pc-v1";
+
+    // Načíst uložená data z localStorage při načtení stránky
+    window.addEventListener('DOMContentLoaded', function() {
+      const stored = localStorage.getItem(STORAGE_KEY);
+      if (stored) {
+        try {
+          const data = JSON.parse(stored);
+          if (Array.isArray(data.codes) && Array.isArray(data.scanned)) {
+            codes = data.codes;
+            scanned = new Set(data.scanned);
+            renderTable();
+            updateStats();
+            document.getElementById('exportBtn').style.display = codes.length > 0 ? "inline-block" : "none";
+            showBarcodeInput();
+          }
+        } catch (e) {}
+      }
+    });
+
+    document.getElementById('csvFile').addEventListener('change', function(e) {
+      Papa.parse(e.target.files[0], {
+        delimiter: ";",
+        header: true,
+        skipEmptyLines: true,
+        complete: function(results) {
+          codes = results.data
+            .filter(row => row.krabice && row.zona)
+            .map(row => ({
+              code: row.krabice.trim(),
+              zone: row.zona.trim()
+            }));
+          scanned.clear();
+          saveToStorage();
+          renderTable();
+          updateStats();
+          document.getElementById('exportBtn').style.display = codes.length > 0 ? "inline-block" : "none";
+          showBarcodeInput();
+        }
+      });
+    });
+
+    function showBarcodeInput() {
+      const input = document.getElementById('barcodeInput');
+      if (codes.length) {
+        input.style.display = "inline-block";
+        setTimeout(() => input.focus(), 100);
+      } else {
+        input.style.display = "none";
+      }
+    }
+
+    function saveToStorage() {
+      localStorage.setItem(STORAGE_KEY, JSON.stringify({
+        codes: codes,
+        scanned: Array.from(scanned)
+      }));
+    }
+
+    function renderTable() {
+      // Nejprve nalezené, pak nenalezené (scanned nahoře)
+      const tbody = document.querySelector('#codeTable tbody');
+      tbody.innerHTML = '';
+      // řazení: scanned nahoře
+      let sorted = [...codes].sort((a, b) => {
+        const aScanned = scanned.has(a.code) ? 0 : 1;
+        const bScanned = scanned.has(b.code) ? 0 : 1;
+        if (aScanned !== bScanned) return aScanned - bScanned;
+        return a.code.localeCompare(b.code, 'cs');
+      });
+      sorted.forEach((row, i) => {
+        let status = scanned.has(row.code) ? '✅ Oskenováno' : '';
+        let tr = `<tr class="${scanned.has(row.code) ? 'scanned' : ''}">
+          <td>${i + 1}</td>
+          <td>${row.code}</td>
+          <td>${row.zone}</td>
+          <td>${status}</td>
+        </tr>`;
+        tbody.insertAdjacentHTML('beforeend', tr);
+      });
+      updateStats();
+    }
+
+    function updateStats() {
+      const total = codes.length;
+      const done = scanned.size;
+      const left = total - done;
+      document.getElementById('stats').innerHTML =
+        `<span class="statlabel">Celkem krabic:</span> <span class="statnum">${total}</span> &nbsp; | &nbsp; ` +
+        `<span class="statlabel">Oskenováno:</span> <span class="statnum">${done}</span> &nbsp; | &nbsp; ` +
+        `<span class="statlabel">Zbývá:</span> <span class="statnum">${left}</span>`;
+    }
+
+    function showAlert(msg) {
+      const el = document.getElementById('alert');
+      el.textContent = msg;
+      el.style.display = 'block';
+      setTimeout(() => { el.style.display = 'none'; }, 2000);
+    }
+
+    // MODÁLNÍ OKNO pro zobrazení krabice
+    function showModal(code, zone) {
+      document.getElementById('modalCode').textContent = code;
+      document.getElementById('modalZone').textContent = 'Zóna: ' + zone;
+      document.getElementById('modalOverlay').style.display = 'flex';
+      setTimeout(() => {
+        document.getElementById('modalClose').focus();
+      }, 100);
+    }
+
+    function hideModal() {
+      document.getElementById('modalOverlay').style.display = 'none';
+      showBarcodeInput();
+    }
+
+    document.getElementById('modalClose').onclick = hideModal;
+    document.getElementById('modalOverlay').onclick = function(e) {
+      if (e.target === this) hideModal();
+    };
+    document.addEventListener('keydown', function(e) {
+      if (document.getElementById('modalOverlay').style.display === 'flex' && (e.key === "Enter" || e.key === "Escape")) {
+        hideModal();
+      }
+    });
+
+    // Hlavní část pro "skenování" z čtečky
+    document.getElementById('barcodeInput').addEventListener('change', onInputScan);
+    document.getElementById('barcodeInput').addEventListener('input', function(e) {
+      if (e.target.value.includes('\n') || e.target.value.includes('\r')) onInputScan(e);
+    });
+
+    function onInputScan(e) {
+      const val = e.target.value.trim();
+      e.target.value = "";
+      if (!val) return;
+      const found = codes.find(row => row.code === val);
+      if (found && !scanned.has(found.code)) {
+        scanned.add(found.code);
+        saveToStorage();
+        showModal(found.code, found.zone); // Velké okno
+        blinkInput();
+        renderTable();
+      }
+      // Kódy mimo seznam ignorovat
+    }
+
+    function blinkInput() {
+      const input = document.getElementById('barcodeInput');
+      input.classList.remove('blink');
+      void input.offsetWidth; // "restart" animace
+      input.classList.add('blink');
+    }
+
+    // Export nenalezených krabic do CSV
+    document.getElementById('exportBtn').addEventListener('click', function() {
+      const notScanned = codes.filter(row => !scanned.has(row.code));
+      if (notScanned.length === 0) {
+        alert("Všechny krabice byly oskenovány!");
+        return;
+      }
+      let csvContent = "krabice;zona\r\n" + 
+        notScanned.map(row => `${row.code};${row.zone}`).join("\r\n");
+      let blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
+      let link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "nenalezeno.csv";
+      link.style.display = "none";
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
+
+    // Udržuj focus na poli (proti ztrátě focusu kliknutím, tabulátorem apod.)
+    document.addEventListener('click', function() {
+      const input = document.getElementById('barcodeInput');
+      if (input && input.style.display !== "none" && document.getElementById('modalOverlay').style.display !== 'flex') input.focus();
+    });
+
+    document.addEventListener('keydown', function(e) {
+      // Stisknutí ESC smaže pole, pokud není otevřené modální okno
+      if (e.key === "Escape" && document.getElementById('modalOverlay').style.display !== 'flex') {
+        const input = document.getElementById('barcodeInput');
+        if (input && input.style.display !== "none") input.value = "";
+      }
+    });
   </script>
 </body>
 </html>
