--- a/bra_pc.html
+++ b/bra_pc.html
@@ -133,7 +133,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <h1>WaitBRA (PC verze)</h1>
+  <h1>WaitBRA</h1>
   <div class="panel">
     <div class="uploader">
       <label>Nahrát CSV seznam 👉 <input type="file" id="csvFile" accept=".csv"></label>
