--- a/bra_pc.html
+++ b/bra_pc.html
@@ -73,19 +73,19 @@
     .statlabel { color: #ff3232; font-size: 18px; font-weight: bold; }
     .statnum { color: #fff; font-size: 22px; font-weight: bold; }
     #backBtn {
-      background: #0066b3;
-      color: #fff;
+      background-color: #ffffff;
+      color: #0066b3;
       font-weight: bold;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
+      border: 2px solid #0066b3;
+      border-radius: 8px;
+      padding: 8px 24px;
+      font-size: 1rem;
       cursor: pointer;
-      margin-right: 8px;
-      transition: background 0.18s;
+      transition: background .18s, color .18s;
     }
     #backBtn:hover {
-      background: #00477b;
+      background-color: #0066b3;
+      color: white;
     }
     #exportBtn {
       background: #ffd700;
